# ebi

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  test.yml
ebi/: __init__.py  appversion.py  core.py  utils.py
ebi/commands/: bgdeploy.py  clonedeploy.py  create.py  deploy.py  utils.py
ebi/commands/config/: __init__.py  ebcli.py  put.py  utils.py
tests/: conftest.py  test_clonedeploy.py  test_private_api_assumptions.py  test_setup_session.py  test_utils.py
